Changes to themes/colors - updating with vars for maintanability. Updated navbar

--- a/stardew_resume/src/assets/main.css
+++ b/stardew_resume/src/assets/main.css
@@ -1,17 +1,14 @@
 @import './theme.css';
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap');
 
 body, .pixel-font {
   font-family: var(--font-primary);
 }
-
 
 #app {
   max-width: 1280px;
 }
 
 /* Button Styling */
-
 .ButtonTextStyle_Standard {
   position: absolute;
   top: 50%;
@@ -19,7 +16,7 @@ body, .pixel-font {
   transform: translate(-50%, -50%);
   font-family: 'Press Start 2P', cursive;
   font-size: 1.2rem;
-  color: #000;
+  color: var(--text-primary);
   text-transform: uppercase;
   letter-spacing: 1px;
   white-space: normal;
@@ -45,7 +42,6 @@ body, .pixel-font {
 }
 
 .ButtonStyle_Standard:hover {
-  filter: drop-shadow(0 14px 28pCox rgba(0,0,0,0.38));
   transform: scale(1.05);
   filter: brightness(1.2)
 }
